Can release snapshot